--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
   </div>
 
   <script>
+    // Store conversation memory
+    let conversationHistory = [
+        { role: "system", content: "You are a kind and empathetic therapist chatbot. You listen attentively and provide warm, supportive responses." }
+    ];
+
     async function chatWithGPT(userMessage) {
         try {
+            // Add user message to memory
+            conversationHistory.push({ role: "user", content: userMessage });
+
             const response = await fetch("https://api.openai.com/v1/chat/completions", {
                 method: "POST",
                 headers: {
@@ -81,10 +89,7 @@
                 },
                 body: JSON.stringify({
                     model: "gpt-4",
-                    messages: [
-                        { role: "system", content: "You are a kind and empathetic therapist chatbot. Respond in a supportive and warm manner." },
-                        { role: "user", content: userMessage }
-                    ]
+                    messages: conversationHistory // Send full chat history
                 })
             });
 
@@ -93,7 +98,12 @@
             }
 
             const data = await response.json();
-            return data.choices[0].message.content;
+            const aiResponse = data.choices[0].message.content;
+
+            // Store AI response in memory
+            conversationHistory.push({ role: "assistant", content: aiResponse });
+
+            return aiResponse;
         } catch (error) {
             console.error("Error:", error);
             return "I'm having trouble responding right now. Please try again later.";
