updated account page

--- a/register.html
+++ b/register.html
@@ -13,27 +13,29 @@
       align-items: center;
       height: 100vh;
       margin: 0;
-      background: linear-gradient(to right, #d4fc79, #96e6a1);
+      background: linear-gradient(to right, #1b263b, #415a77);
     }
     .register-container {
-      background: rgba(255, 255, 255, 0.2);
+      background: rgba(224, 225, 221, 0.2);
       backdrop-filter: blur(10px);
       padding: 30px;
       border-radius: 15px;
-      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.3);
       width: 350px;
       text-align: center;
+      color: #e0e1dd;
     }
     h2 {
-      color: #333;
+      color: #e0e1dd;
     }
     input {
       width: 100%;
       padding: 10px;
       margin: 10px 0;
-      border: 1px solid #ccc;
+      border: 1px solid #778da9;
       border-radius: 5px;
-      background: rgba(255, 255, 255, 0.5);
+      background: rgba(224, 225, 221, 0.8);
+      color: #0d1b2a;
     }
     .password-container {
       position: relative;
@@ -44,12 +46,13 @@
       top: 50%;
       transform: translateY(-50%);
       cursor: pointer;
+      color: #0d1b2a;
     }
     button {
       width: 100%;
       padding: 10px;
-      background-color: #28a745;
-      color: white;
+      background-color: #415a77;
+      color: #e0e1dd;
       border: none;
       border-radius: 5px;
       cursor: pointer;
@@ -57,7 +60,7 @@
       font-weight: bold;
     }
     button:hover {
-      background-color: #218838;
+      background-color: #1b263b;
     }
     .login-link {
       margin-top: 15px;
@@ -65,7 +68,7 @@
     }
     .login-link a {
       text-decoration: none;
-      color: #007bff;
+      color: #778da9;
       font-weight: bold;
     }
     .google-login {
@@ -74,7 +77,7 @@
       justify-content: center;
     }
     .google-login button {
-      background-color: #db4437;
+      background-color: #0d1b2a;
       font-size: 14px;
       display: flex;
       align-items: center;
