--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Landing Page with Chatbot</title>
+  <title>Teen.zen – Landing Page with Chatbot</title>
   <style>
     * {
       box-sizing: border-box;
@@ -138,46 +138,70 @@
 <body>
   <div id="root"></div>
 
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <!-- React (production builds) -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+  <!-- Babel so the browser can understand JSX -->
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
   <script type="text/babel">
     const { useState } = React;
 
     const Chatbot = () => {
       const [open, setOpen] = useState(false);
-      const [messages, setMessages] = useState([{ text: "Hi! I'm your assistant. How can I help?", sender: 'bot' }]);
+      const [messages, setMessages] = useState([
+        { text: "Hi! I'm your assistant. How can I help?", sender: "bot" }
+      ]);
       const [input, setInput] = useState("");
 
       const sendMessage = async () => {
         if (!input.trim()) return;
-        const userMsg = { text: input, sender: 'user' };
-        setMessages([...messages, userMsg]);
+
+        const text = input;
         setInput("");
 
+        // add user message
+        setMessages(prev => [...prev, { text, sender: "user" }]);
+
         try {
-          const res = await fetch('http://localhost:3000/api/message', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ prompt: input })
+          // NOTE: this will only work if you actually have a backend
+          // running at this URL. Otherwise we fall back to a demo reply.
+          const res = await fetch("http://localhost:3000/api/message", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({ prompt: text })
           });
-          const data = await res.json();
-          const botMsg = { text: data.response || "Sorry, I didn't get that.", sender: 'bot' };
-          setMessages(prev => [...prev, botMsg]);
+
+          let botText = "Thanks for your message! (demo reply – backend not connected yet.)";
+
+          if (res.ok) {
+            const data = await res.json();
+            if (data && typeof data.response === "string" && data.response.trim()) {
+              botText = data.response.trim();
+            }
+          }
+
+          setMessages(prev => [...prev, { text: botText, sender: "bot" }]);
         } catch (err) {
-          setMessages(prev => [...prev, { text: "Error contacting server.", sender: 'bot' }]);
+          console.error(err);
+          setMessages(prev => [
+            ...prev,
+            { text: "Error contacting server. Using demo reply instead.", sender: "bot" }
+          ]);
         }
       };
 
       return (
         <>
-          <button className="chat-button" onClick={() => setOpen(!open)}>💬</button>
+          <button className="chat-button" onClick={() => setOpen(o => !o)}>💬</button>
           {open && (
             <div className="chat-window">
               <div className="chat-messages">
                 {messages.map((msg, i) => (
-                  <div key={i} className={msg.sender === 'bot' ? 'message-bot' : 'message-user'}>
+                  <div
+                    key={i}
+                    className={msg.sender === "bot" ? "message-bot" : "message-user"}
+                  >
                     {msg.text}
                   </div>
                 ))}
@@ -186,7 +210,7 @@
                 <input
                   value={input}
                   onChange={e => setInput(e.target.value)}
-                  onKeyDown={e => e.key === 'Enter' && sendMessage()}
+                  onKeyDown={e => e.key === "Enter" && sendMessage()}
                   placeholder="Type a message..."
                 />
                 <button onClick={sendMessage}>➤</button>
@@ -221,7 +245,8 @@
       </div>
     );
 
-    ReactDOM.createRoot(document.getElementById('root')).render(<App />);
+    const root = ReactDOM.createRoot(document.getElementById("root"));
+    root.render(<App />);
   </script>
 </body>
 </html>
