added podcat img

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </div>
 
         <div className="info-media">
-          <img src="assets/img/podcast.jpg" alt="Person speaking into microphone" />
+          <img src="assets/img/podcast.jpg" alt="img/podcast" />
           <hr className="info-divider" />
           <h2 className="info-heading">Start Chatting</h2>
           <div className="info-platforms">
