--- a/index.html
+++ b/index.html
@@ -302,7 +302,8 @@
         </div>
 
         <div className="info-media">
-          <img src="assets/img/podcast.png" alt="img/podcast.png" />
+          <!-- Update the file name/extension here if needed -->
+          <img src="assets/img/podcast.png" alt="Person speaking into a microphone" />
           <hr className="info-divider" />
           <h2 className="info-heading">Start Chatting</h2>
           <div className="info-platforms">
