--- a/svelte-teen-zen/index.html
+++ b/svelte-teen-zen/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Teen.zen - Your mental health companion. Empowering teenagers to manage stress, anxiety, and negative thoughts.">
+    <meta name="description" content="Teen Zen - Your mental health companion. Empowering teenagers to manage stress, anxiety, and negative thoughts.">
     <meta name="keywords" content="mental health, teenagers, anxiety, stress, depression, CBT, mindfulness">
-    <title>Teen.zen - Your Mental Health Companion</title>
+    <title>Teen Zen - Your Mental Health Companion</title>
   </head>
   <body>
     <div id="app"></div>
